--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,18 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="navbar navbar-dark bg-dark border-bottom">
+      <div class="container-fluid">
+        <%= link_to "Restaurants", restaurants_path, class:"navbar-brand text-light" %>
+        <%= link_to "Add new Restaurant", new_restaurant_path, class:"nav-link text-light" %>
+      </div>
+    </div>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+           <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
