--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -6,4 +6,4 @@
   <%= f.input :category %>
   <%= f.submit %>
 <% end %>
-<%= link_to "Back", restaurants_path %>
+<%= link_to "Back", restaurants_path, class: "btn btn-primary" %>
