--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,7 @@
+<h1>New review</h1>
 <%= simple_form_for [ @restaurant, @review ] do |f| %>
   <%= f.input :content %>
   <%= f.input :rating %>
-  <%= f.submit "Submit review", class: "btn btn-primary" %>
+  <%= f.submit "Submit review" %>
 <% end %>
-<%= link_to "Back", restaurant_path(@restaurant.id) %>
+<%= link_to "Back", restaurant_path(@restaurant.id), class: "btn btn-primary" %>
